# Leitmotif

./: .gitignore  LEITMOTIV_DESIGN.md  README.md  SUBMODULE_SETUP.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
contract/: choreography.schema.json
design/: dc2-body.html  dc2-full.html  design-reference-2.html  design-reference.html
design/design-reference-3/leitmotif-scene-director/project/: .thumbnail  Leitmotif-export.dc.html  Leitmotif.dc.html  Leitmotif.html
design/design-reference-4/leitmotif-scene-director/: README.md
design/design-reference-4/leitmotif-scene-director/project/: .thumbnail  Leitmotif-export.dc.html  Leitmotif.dc.html  Leitmotif.html
src/: assets.ts  bridge.ts  chain_dialog.test.ts  chain_dialog.ts  dialog.ts  form.ts  graph.test.ts  graph.ts  keys.ts  layout_store.test.ts  layout_store.ts  main.ts  menu.ts  preview.ts  project.test.ts  project.ts  rules.test.ts  rules.ts  scene.ts  schema.ts  stage.ts  story.test.ts  story.ts  story_suggest.test.ts  story_suggest.ts  style.css  suggest.test.ts  suggest.ts  timeline.ts  trigger.ts  vocab.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: main.rs
